metadata-sfdx/force-app/main/default/objects/MIFile__c/MIFile__c.object-meta.xml
<CustomObject>
    <description>Custom junction object for MIIncident__c Files, linking ContentVersion records in the Chatter file system to Attachments across Case and EmailMessage records.</description>
    <label>MIFile</label>
    <nameField>
        <label>MI File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MiFiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>