metadata-sfdx/force-app/main/default/objects/MIFile__c/fields/AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentId__c</fullName>
    <description>Reference to related Attachment Record</description>
    <externalId>true</externalId>
    <label>AttachmentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>