metadata-sfdx/force-app/main/default/objects/MIFile__c/fields/AttachmentParentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentParentId__c</fullName>
    <description>ParentId of the AttachmentId's record, should be a Case or EmailMessage key prefix</description>
    <externalId>true</externalId>
    <label>AttachmentParentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>