metadata-sfdx/force-app/main/default/objects/MIFile__c/fields/MIIncident__c.field-meta.xml
<CustomField>
    <fullName>MIIncident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to related MIIncident__c record</description>
    <label>MI Incident</label>
    <referenceTo>MIIncident__c</referenceTo>
    <relationshipLabel>MiFiles</relationshipLabel>
    <relationshipName>MiFiles</relationshipName>
    <type>Lookup</type>
</CustomField>