metadata-sfdx/force-app/main/default/objects/MIFile__c/fields/NewAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>NewAttachmentId__c</fullName>
    <description>Reference to related ContentDocument/ContentVersion record</description>
    <externalId>true</externalId>
    <label>NewAttachmentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>